# oarepo-kerberos

./: .copyright.tmpl  .gitignore  MANIFEST.in  README.md  docker-compose.yml  pyproject.toml  run-tests.sh  setup.cfg  setup.py
.github/workflows/: build.yml
oarepo_kerberos/: __init__.py  ext.py  proxies.py  wsgi.py
oarepo_kerberos/cli/: __init__.py  cli.py
oarepo_kerberos/resources/: __init__.py  negotiate.py
setup_local_kdc/: kerberos-setup  krb5-client.conf
tests/: conftest.py  datasets.yml  flask.keytab  test_cli.py  test_kerberos_auth.py
