[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oarepo_kerberos"
version = "0.1.0"
description = "A library for Kerberos integration in Oarepo."
authors = []
requires-python = ">=3.12,<3.13"

# Add dependencies if you have any
dependencies = [
   'flask-gssapi'
]

[project.entry-points."invenio_base.apps"]
oarepo_kerberos = "oarepo_kerberos.ext:OarepoKerberosExt"

[project.entry-points."invenio_base.api_apps"]
oarepo_kerberos = "oarepo_kerberos.ext:OarepoKerberosExt"