[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oarepo_kerberos"
version = "0.1.0"
description = "A library for Kerberos integration in Oarepo."
authors = []
requires-python = ">=3.12,<3.13"

dependencies = [
   'flask-gssapi',
   'click',
   'flask-login',
]

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["oarepo_kerberos"]
exclude = ["setup_local_kdc*", "tests*", "datasets*"]

[project.optional-dependencies]
tests = [
   "pytest~=7.1.3",
   "pytest-invenio",
   "pytest-flask",
   "requests-kerberos"
]

[project.entry-points."invenio_base.apps"]
oarepo_kerberos = "oarepo_kerberos.ext:OarepoKerberosExt"

[project.entry-points."invenio_base.api_apps"]
oarepo_kerberos = "oarepo_kerberos.ext:OarepoKerberosExt"