[metadata]
name = oarepo_kerberos
version = 0.1.0
description = A library for Kerberos integration in Oarepo.
author =
python_requires = >=3.12,<3.13

[options]
install_requires =
    flask-gssapi
    click
    flask-login
include_package_data = false
packages = find:

[options.packages.find]
include =
    oarepo_kerberos*
exclude =
    setup_local_kdc*
    tests*
    datasets*

[options.extras_require]
tests =
    pytest~=7.1.3
    pytest-invenio
    pytest-flask
    requests-kerberos

[options.entry_points]
invenio_base.apps =
    oarepo_kerberos = oarepo_kerberos.ext:OarepoKerberosExt
invenio_base.api_apps =
    oarepo_kerberos = oarepo_kerberos.ext:OarepoKerberosExt
invenio_base.finalize_app =
    oarepo_requests = oarepo_kerberos.ext:finalize_app
invenio_base.api_finalize_app =
    oarepo_requests = oarepo_kerberos.ext:api_finalize_app